--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
+    <script src="client.js"></script>
  </head>
  <body>
     <h1>Power Newser</h1>
+    <input id="search_term" type="text" />
+    <button id="search_button">Search</button>
  </body>
  </html>
