--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     <h1>Power Newser</h1>
     <input id="search_term" type="text" />
     <button id="search_button">Search</button>
+    <ul id="news_list"></ul>
  </body>
  </html>
