Working on stuff

--- a/public/html/faq.html
+++ b/public/html/faq.html
@@ -25,7 +25,7 @@
     
     <br>
     <p> <b> What news sites do the articles come from? </b> </p>
-    <p> The articles come from a variety of news sites using APIs.</p>
+    <p> The articles come from a variety of news sites using an API from Google.</p>
 </body>
 
 </html>
